<resources>
    <string name="app_name">TicTacToe</string>
    <string name="shr_hint_email_address">Email Address</string>
    <string name="shr_hint_password">Password</string>
    <string name="button_login">Sign in</string>
    <string name="shr_button_cancel">Cancel</string>
    <string name="button_login_anonymously">Continue as guest</string>
    <string name="create_an_account">Create account</string>
    <string name="shr_hint_verify_password">Verify password</string>
    <string name="button_create_account">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_email_hint">Request game to…</string>
    <string name="action_request">Request</string>
    <string name="default_notification_channel_id">default</string>
    <string name="firebase_sign_in_fail">Sign in fail</string>
    <string name="firebase_sign_up_fail">Sign up fail</string>
    <string name="firebase_auth_instance_null">Firebase authentication instance must be initialized</string>
    <string name="action_replay">Play Again?</string>
    <string name="play_vs_friend">Play vs friend</string>
    <string name="highscore">Highscore</string>
    <string name="draws">Draws</string>
    <string name="wins">Wins</string>
    <string name="lost">Lost</string>
    <string name="play_solo">PLAY SOLO</string>
    <string name="action_exit">Exit</string>


</resources>